fix css rule that was overflowing to the edit patient view

--- a/frontend/src/app/testQueue/QueueItem.scss
+++ b/frontend/src/app/testQueue/QueueItem.scss
@@ -8,9 +8,9 @@
   position: relative;
 } 
 
-.usa-label, .usa-legend {
-  display:inline !important;
-  line-height: 1.6 !important;
+.patient-information-ul .usa-legend, .patient-information-ul  .usa-label {
+  display:inline;
+  line-height: 1.6;
 }
 
 .prime-ul, .patient-information-ul {
